revisit form done

--- a/static/css/LDashboardStyle.css
+++ b/static/css/LDashboardStyle.css
@@ -1,319 +1,338 @@
-body{padding:0;
-    margin:0;
-  background:#eee;
-  }
-  .all{
-  padding-top:3vh;
-  }
-  header{
+body {
+  padding: 0;
+  margin: 0;
+  background: #eee;
+}
+.all {
+  padding-top: 3vh;
+}
+header {
   position: sticky;
-  background-color:rgb(67 28 58);
+  background-color: rgb(67 28 58);
   text-align: left;
   padding: 1px;
-  padding-left:10px;
-  margin-top:0px;
-  }
-  
-  .h1{
+  padding-left: 10px;
+  margin-top: 0px;
+}
+
+.h1 {
   position: sticky;
   font-size: 1.4vw;
   color: white;
-  margin-bottom:30px;
-  }
-  
-  .username{
+  margin-bottom: 30px;
+}
+
+.username {
   color: #eee;
   position: absolute;
   top: 2.7vh;
   right: 3vw;
   font-size: 1.2vw;
-  }
-  
-  .settings{
+}
+
+.settings {
   background-image: url("https://static.thenounproject.com/png/83396-200.png");
-  background-size:contain;
-  background-Repeat:no-Repeat;
+  background-size: contain;
+  background-repeat: no-Repeat;
   position: absolute;
   top: 20px;
   right: 25px;
-  height:0.7cm;
-  width:0.6cm;
-  border-radius:0.2cm;
-  color:#444343;
-  }
-  
-  
-  
-  /* ========================================================================
+  height: 0.7cm;
+  width: 0.6cm;
+  border-radius: 0.2cm;
+  color: #444343;
+}
+
+/* ========================================================================
   * POPUP Settings
   * ======================================================================== */
-  .settingmodel-mysettings {
-    background-color: #f2f2f2;
-    width: 550px;
-    height: 350px;
-    padding: 10px;
-    padding-left:30px;
-    padding-bottom:50px;
-  
-    border-radius: 20px;
-    box-shadow: 10px 10px 50px 0.1px rgba(0, 0, 0, 0.664);
-  
-    position: fixed;
-    left: 50vw;
-    top: 50vh;
-  
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    font-size: 30px;
-  
-    font-family: 'Roboto', sans-serif;
-  }
-  
-  .settingmodel-background {
-    background-color: rgba(0, 0, 0, 0.452);
-    width: 100%;
-    height: 100%;
-  
-    position: fixed;
-    left: 0;
-    top: 0;
-  
-    backdrop-filter: blur(2px);
-  
-    z-index: 1;
-  }
-  .box1{
-    width: 340px;
-    border-radius: 0.15cm;
-    height:35px;
-    font-size: 15px;
-    position:absolute;
-    left:30%;
-    outline:none;
-    border: 1px solid #515152a9;
-  }
-  .setrow{
-    height:17%;
-  }
-  .lab{
-    font-size: 14px;
-    display:inline-block;
-    float:left;
-    text-align:left;
-    padding-top:12px;
-  }
-  #settingTit{
-    text-align:center;
-    padding:25px;
-    margin:0;
-  }
-  .fixed1{
-    background-color:#eee;
-  }
-  
-  .settingmodel-close {
-    background-color: #eee;
-    border-style: none;
-    outline: none;
-    font-size: 30px;
-    position: absolute;
-    top: 4px;
-    right: 15px;
-  }
-  .settingmodel-close:hover {
-    color: rgb(146, 0, 0);
-  }
-  
-  .btnChange {
-    position: absolute;
-    right: 45px;
-    bottom: 30px;
-    border-radius: 0.2cm;
-    width: 90px;
-    height: 37px;
-    font-size: 16px;
-    color: #eee;
-    background-color: #37BC9B;
-    cursor:pointer;
-    outline:none;
-    border:none;
-    box-shadow: #999;
-  }
-  
-  .btnChange:active{
-    transform: translateY(2px);
-  }
-  
-  .warnning{
-    color: rgb(146, 0, 0);
-    font-size: 16px;
-    margin-top:0.1cm;
-    margin-left: 3.7cm;
-  }
-  
-  .Settinghidden{
-    display:none;
-  }
-  /* ========================================================================*/
-  
-  .kebabSettings figure {
-    background: #eee;
-  }
-  .filters1{
-    top: 3vh;
-  }
-  .OutFill{
-      background-color: rgb(202, 202, 202);
-      margin-top: 4vh;
-      margin-bottom: 4vh;
-      border: 2px solid rgb(202, 202, 202);
-      padding: 16px;
-  }
-  .fill{
-      border-radius: 0.1cm;
-      height: 28px;
-      margin-top: 8px;
-      margin-bottom: 10px;
-      border: 2px solid rgb(180, 178, 178);
-  }
-  .fill2{
-      width: 175px;
-  }
-  .lab1{
-      font-weight: 1px;
-  }
-  .drop{
-      height: 28px;
-      width: 190px;
-      border-radius: 0.1cm;
-      margin-bottom: 10px;
-  }
+.settingmodel-mysettings {
+  background-color: #f2f2f2;
+  width: 550px;
+  height: 350px;
+  padding: 10px;
+  padding-left: 30px;
+  padding-bottom: 50px;
 
-  .ind{
-      position: relative;
-      width: 80px;
-  }
-  .fillbtn{
-    position: relative;
-    color: #14191b;
-  }
+  border-radius: 20px;
+  box-shadow: 10px 10px 50px 0.1px rgba(0, 0, 0, 0.664);
 
-  .btn:active{
+  position: fixed;
+  left: 50vw;
+  top: 50vh;
+
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  font-size: 30px;
+
+  font-family: "Roboto", sans-serif;
+}
+
+.settingmodel-background {
+  background-color: rgba(0, 0, 0, 0.452);
+  width: 100%;
+  height: 100%;
+
+  position: fixed;
+  left: 0;
+  top: 0;
+
+  backdrop-filter: blur(2px);
+
+  z-index: 1;
+}
+.box1 {
+  width: 340px;
+  border-radius: 0.15cm;
+  height: 35px;
+  font-size: 15px;
+  position: absolute;
+  left: 30%;
+  outline: none;
+  border: 1px solid #515152a9;
+}
+.setrow {
+  height: 17%;
+}
+.lab {
+  font-size: 14px;
+  display: inline-block;
+  float: left;
+  text-align: left;
+  padding-top: 12px;
+}
+#settingTit {
+  text-align: center;
+  padding: 25px;
+  margin: 0;
+}
+.fixed1 {
+  background-color: #eee;
+}
+
+.settingmodel-close {
+  background-color: #eee;
+  border-style: none;
+  outline: none;
+  font-size: 30px;
+  position: absolute;
+  top: 4px;
+  right: 15px;
+}
+.settingmodel-close:hover {
+  color: rgb(146, 0, 0);
+}
+
+.btnChange {
+  position: absolute;
+  right: 45px;
+  bottom: 30px;
+  border-radius: 0.2cm;
+  width: 90px;
+  height: 37px;
+  font-size: 16px;
+  color: #eee;
+  background-color: #37bc9b;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  box-shadow: #999;
+}
+
+.btnChange:active {
   transform: translateY(2px);
-  }
-  
-  .nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
+}
+
+.warnning {
+  color: rgb(146, 0, 0);
+  font-size: 16px;
+  margin-top: 0.1cm;
+  margin-left: 3.7cm;
+}
+
+.Settinghidden {
+  display: none;
+}
+/* ========================================================================*/
+
+.kebabSettings figure {
+  background: #eee;
+}
+.filters1 {
+  top: 3vh;
+}
+.OutFill {
+  background-color: rgb(202, 202, 202);
+  margin-top: 4vh;
+  margin-bottom: 4vh;
+  border: 2px solid rgb(202, 202, 202);
+  padding: 16px;
+}
+.fill {
+  border-radius: 0.1cm;
+  height: 28px;
+  margin-top: 8px;
+  margin-bottom: 10px;
+  border: 2px solid rgb(180, 178, 178);
+}
+.fill2 {
+  width: 175px;
+}
+.lab1 {
+  font-weight: 1px;
+}
+.drop {
+  height: 28px;
+  width: 190px;
+  border-radius: 0.1cm;
+  margin-bottom: 10px;
+}
+
+.ind {
+  position: relative;
+  width: 80px;
+}
+.fillbtn {
+  position: relative;
+  color: #14191b;
+}
+
+.btn:active {
+  transform: translateY(2px);
+}
+
+.nav-pills > li.active > a,
+.nav-pills > li.active > a:focus,
+.nav-pills > li.active > a:hover {
   color: #fff;
   background-color: #378ebc;
   margin-top: 2px;
-  }
-  
-  .panel-teal .panel-heading {
+}
+
+.panel-teal .panel-heading {
   background-color: #378ebc;
   border: 1px solid #378ebc;
   color: white;
-  }
-  
-  .panel .panel-heading {
+}
+
+.panel .panel-heading {
   padding: 5px;
   border-top-right-radius: 3px;
   border-top-left-radius: 3px;
-  border-bottom: 1px solid #DDD;
+  border-bottom: 1px solid #ddd;
   -moz-border-radius: 0px;
   -webkit-border-radius: 0px;
   border-radius: 0px;
-  }
-  
-  .panel .panel-heading .panel-title {
+}
+
+.panel .panel-heading .panel-title {
   padding: 10px;
   font-size: 17px;
-  }
-  
-  form .form-group {
+}
+
+form .form-group {
   position: relative;
   margin-left: 0px !important;
   margin-right: 0px !important;
-  }
-  
-  .inner-all {
+}
+
+.inner-all {
   padding: 10px;
-  }
-  
-  /* ========================================================================
+}
+
+/* ========================================================================
   * Submission
   * ======================================================================== */
-  
-  .nav-email li.active .label {
-  padding:4px;
+
+.nav-email li.active .label {
+  padding: 4px;
   background-color: white;
   color: black;
-  }
-  .nav-email li a {
+}
+.nav-email li a {
   color: black;
   -moz-border-radius: 0px;
   -webkit-border-radius: 0px;
   border-radius: 0px;
-  }
-  .nav-email li a:hover {
-  background-color: #EEEEEE;
-  }
-  .nav-email li a i {
+}
+.nav-email li a:hover {
+  background-color: #eeeeee;
+}
+.nav-email li a i {
   margin-right: 5px;
-  }
-  .nav-email li a .label {
+}
+.nav-email li a .label {
   margin-top: -1px;
-  }
-  
-  .table-email tr:first-child td {
+}
+
+.table-email tr:first-child td {
   border-top: none;
-  }
-  .table-email tr td {
+}
+.table-email tr td {
   vertical-align: top !important;
-  }
-  .table-email tr td:first-child, .table-email tr td:nth-child(2) {
+}
+.table-email tr td:first-child,
+.table-email tr td:nth-child(2) {
   text-align: center;
   width: 35px;
-  }
-  .table-email tr.unread, .table-email tr.selected {
-  background-color: #EEEEEE;
-  }
-  .table-email .media {
+}
+.table-email tr.unread,
+.table-email tr.selected {
+  background-color: #eeeeee;
+}
+.table-email .media {
   margin: 0px;
   padding: 0px;
   position: relative;
-  }
-  .table-email .media h4 {
+}
+.table-email .media h4 {
   margin: 0px;
   font-size: 14px;
   line-height: normal;
-  }
-  .table-email .media-object {
+}
+.table-email .media-object {
   width: 35px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
-  }
-  .table-email .media-meta, .table-email .media-attach {
+}
+.table-email .media-meta,
+.table-email .media-attach {
   font-size: 11px;
   color: #999;
   position: absolute;
   right: 10px;
-  }
-  .table-email .media-meta {
+}
+.table-email .media-meta {
   top: 0px;
-  }
-  .table-email .media-attach {
+}
+.table-email .media-attach {
   bottom: 0px;
-  }
-  .table-email .media-attach i {
+}
+.table-email .media-attach i {
   margin-right: 10px;
-  }
-  .table-email .media-attach i:last-child {
+}
+.table-email .media-attach i:last-child {
   margin-right: 0px;
-  }
-  .table-email .email-summary {
+}
+.table-email .email-summary {
   margin: 0px 110px 0px 0px;
-  }
-  .table-email .email-summary span {
+}
+.table-email .email-summary span {
   line-height: 1;
-  }
+}
+
+.subOpen {
+  background-image: url(http://www.concyteq.edu.mx/transparencia/imagenes/ZMC-EmailIcon.png);
+  background-size: contain;
+  background-repeat: no-Repeat;
+  height: 0.8cm;
+  width: 0.8cm;
+  border-radius: 2cm;
+}
+
+.subOpen:active {
+  background-image: url(http://www.concyteq.edu.mx/transparencia/imagenes/ZMC-EmailIcon.png);
+  background-size: contain;
+  background-repeat: no-Repeat;
+}
