--- a/templates/SDashboard.html
+++ b/templates/SDashboard.html
@@ -131,40 +131,17 @@
                                 <h3 class="panel-title" id="unreadLab2"></h3>
                             </div>
                             <div class="clearfix"></div>
-                        </div><!-- /.panel-heading -->
-                        <div class="panel-sub-heading inner-all">
-                            <div class="pull-left">
-                                <ul class="list-inline no-margin">
-                                    <li>
-                                        <div class="btn-group" id = "del">
-                                            <button class="btn btn-default btn-sm tooltips" type="button" data-toggle="tooltip" data-container="body" title="" data-original-title="Delete"><i class="fa fa-trash-o"></i></button>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="pull-right">
-                                <ul class="list-inline no-margin">
-                                    <li>
-                                        <div class="btn-group">
-                                            <a href="#" class="btn btn-sm btn-default"><i class="fa fa-angle-left"></i></a>
-                                            <a href="#" class="btn btn-sm btn-default"><i class="fa fa-angle-right"></i></a>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="clearfix"></div>
                         </div>
+                        
                         <div class="panel-body no-padding">
                             <div class="table-responsive">
                                 <table class="table table-hover table-email">
-                                    <tbody id="text">                                        
-                                            <tr class="unread">
-                                                {% for application in applications %}
+                                    <tbody id="text">
+                                            {% for application in applications %}
+                                            {% if application[4]=="0"%}                                        
+                                            <tr class="unread">                                                
                                                 <td>
-                                                    <div class="ckbox ckbox-theme">
-                                                        <input id="checkbox1" type="checkbox"  class="mail-checkbox" name={{application[0]}}>
-                                                        <label for="checkbox1"></label>
-                                                    </div>
+                                                    <button class="btn subOpen" type="submit" name={{application[0]}} value={{application[0]}}></button>
                                                 </td>
                                                 <td>
                                                 </td>
@@ -173,31 +150,31 @@
                                                         <div class="media-body">
                                                             <h4 class="text-primary">{{application[1]}}</h4>
                                                             <p class="email-summary">{{application[2]}}</p>
-                                                            <span class="media-meta">Today at 1:13am</span>
+                                                            <span class="media-meta">{{application[3]}}</span>
                                                         </div>
                                                     </div>
                                                 </td>
-                                            </tr> 
-                                            {% endfor %}                                   
+                                            </tr>
+                                            {% else %} 
+                                                                               
                                         <tr>
                                             <td>
-                                                <div class="ckbox ckbox-theme">
-                                                    <input id="checkbox1" type="checkbox" class="mail-checkbox" name="go">
-                                                    <label for="checkbox1"></label>
-                                                </div>
+                                                <button class="btn subOpen" type="submit" name={{application[0]}} value={{application[0]}}></button>
                                             </td>
                                             <td>
                                             </td>
                                             <td>
                                                 <div class="media">
                                                     <div class="media-body">
-                                                        <h4 class="text-primary">Vishaka Nanayakkara</h4>
-                                                        <p class="email-summary">Repeat exams As First Attempt with the next batch</p>
-                                                        <span class="media-meta">Feb 28</span>
+                                                        <h4 class="text-primary">{{application[1]}}</h4>
+                                                        <p class="email-summary">{{application[2]}}</p>
+                                                        <span class="media-meta">{{application[3]}}</span>
                                                     </div>
                                                 </div>
                                             </td>
                                         </tr>
+                                        {% endif %}
+                                        {% endfor %}
                                     </tbody>
                                 </table>
                             </div>
