--- a/static/css/Application.css
+++ b/static/css/Application.css
@@ -43,7 +43,7 @@ input[type="submit"] {
 .Appcontainer {
   border-radius: 10px;
   background-color: #f2f2f2;
-  height: 16cm;
+  height: 24cm;
   width: 16cm;
   margin: auto;
   margin-top: 1cm;
@@ -65,6 +65,41 @@ input[type="submit"] {
   margin-top: 16px;
 }
 
+.dbut{
+  background-image:url("https://findicons.com/files/icons/2813/flat_jewels/512/file.png");
+  background-size: cover;
+  width: 0.75cm;
+  height: 0.75cm;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.dbut :active{
+  border: none;
+  outline: none;
+  transform: translateY(2px);
+}
+
+.dbut :focus{
+  border: none;
+}
+
+.comB{
+  width: 100%;
+  height: 5cm;
+  width: 75%;
+  position: relative;
+  bottom:-0.6cm;
+  float: right;
+}
+
+.recieve{
+  display: block; 
+  text-align: left;
+  color: #800000;
+}
+
 /* Clear floats after the columns */
 .row:after {
   content: "";
@@ -78,11 +113,11 @@ input[type="submit"] {
 }
 .submitbut {
   position: relative;
-  bottom: 30%;
+  bottom: 20%;
   left: 20%;
   align-self: center;
   align-items: center;
-  margin-top: 5cm;
+  margin-top: 5.5cm;
   margin-left: 185pt;
 }
 .choosefile {
