--- a/templates/SApplicationSubView.html
+++ b/templates/SApplicationSubView.html
@@ -97,7 +97,7 @@
                   No file attached
                 {% else %}
                   <form method = "POST" action="/download">
-                    <button type="submit" name="downloadFile" value="downloadFile" disabled="disabled"><a href="{{url_for('download_files')}}" disabled="disabled">Download File</a></button>
+                    <button class="dbut" type="submit" name="downloadFile" value="downloadFile"><a href="{{url_for('download_files')}}" disabled="disabled"></a></button>
                   </form>
                 {% endif %}
               </div>
