--- a/templates/LSubmissionForm.html
+++ b/templates/LSubmissionForm.html
@@ -96,7 +96,7 @@
                   No file attached
                 {% else %}
                   <form method = "POST" action="/download">
-                    <button type="submit" name="downloadFile" value="downloadFile" disabled="disabled"><a href="{{url_for('download_files')}}" disabled="disabled">Download File</a></button>
+                    <button type="submit" name="downloadFile" value="downloadFile" disabled="disabled"><a href="{{url_for('download_files')}}" disabled="disabled">Download File</a></button>{{filename}}
                   </form>
                 {% endif %}
                 
