--- a/static/css/Application.css
+++ b/static/css/Application.css
@@ -19,8 +19,9 @@ textarea {
 .outer{
   background-image: url(https://images.unsplash.com/photo-1513530534585-c7b1394c6d51?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80);
   background-repeat: no-repeat;
-  background-size:cover;
   backdrop-filter: blur(2px);
+  background-size: cover;
+  background-position:inherit;
 }
 
 
@@ -83,6 +84,12 @@ input[type="submit"] {
 
 .dbut :focus{
   border: none;
+}
+
+.filen{
+  position: relative;
+  left: 1cm;
+  color: rgb(39, 39, 41);
 }
 
 .comB{
