--- a/templates/LDashboard.html
+++ b/templates/LDashboard.html
@@ -173,7 +173,7 @@
                     <div class="panel rounded shadow panel-teal">
                         <div class="panel-heading">
                             <div class="pull-left">
-                                <h3 class="panel-title" id="unreadLab2"></h3>
+                                <h3 class="panel-title" id="unreadLab2">Submissions ({{length}})</h3>
                             </div>
                             <div class="clearfix"></div>
                         </div>
