fixed download button error

--- a/templates/SDashboard.html
+++ b/templates/SDashboard.html
@@ -117,8 +117,10 @@
                 <div class="col-sm-3">
                     <input class="btn btn-danger btn-block btn-compose-email" id="newSubmission" type = "submit" value="New Submission" name="New Submission">
                     <ul class="nav nav-pills nav-stacked nav-email shadow mb-20">
-                        <li class="active">                            
-                            <i class="fa fa-inbox"></i> Submissions <span class="label pull-right" id = "unreadLab1">{{length}}</span>
+                        <li class="active">
+                            <a disabled="disabled">                           
+                                <i class="fa fa-inbox"></i> Submissions <span class="label pull-right" id = "unreadLab1">{{length}}</span>
+                            </a>
                         </li>
                     </ul><!-- /.nav -->
                 </div>
