--- a/templates/LSubmissionForm.html
+++ b/templates/LSubmissionForm.html
@@ -68,7 +68,7 @@
               type="text"
               id="RequestType"
               name="RequestType"
-              value={{requestValue}}
+              value="{{requestValue}}"
             />
           </div>
         </div>
@@ -96,7 +96,7 @@
                   No file attached
                 {% else %}
                   <form method = "POST" action="/download">
-                    <button class="dbut" type="submit" name="downloadFile" value="downloadFile"><a class="filen" href="{{url_for('download_files')}}" disabled="disabled">{{filename}}</a></button>
+                    <button class="dbut" type="submit" name="downloadFile" value="downloadFile" onclick="{{url_for('download_files')}}"></button>{{filename}}
                   </form>
                 {% endif %}
                 
