--- a/static/css/SDashboardStyle.css
+++ b/static/css/SDashboardStyle.css
@@ -6,6 +6,7 @@ body {
 .all {
   padding-top: 3vh;
 }
+
 header {
   position: sticky;
   background-color: rgb(133, 133, 133);
@@ -163,12 +164,12 @@ header {
 }
 
 .btn:active {
-  border: none;
   transform: translateY(2px);
 }
 
-.btn:focus{
+.btn:active:focus{
   border: none;
+  outline: none;
 }
 
 .nav-pills > li.active > a,
